package IM.Server;
import "IM.BaseDefine.proto";
option java_package = "com.dffx.im.protobuf";
option optimize_for = LITE_RUNTIME;

//service id:   0x0008

//db_proxy
message IMStopReceivePacket{
	//cmd id:   0x0802
	required uint32 result = 1;
}

//db_proxy
message IMValidateReq{
	//cmd id:	0x0803
	required string user_name = 1;
	required string password = 2;
	
	optional IM.BaseDefine.ClientType client_type = 10;
	optional string client_ip = 11;
	optional string client_version = 12;
	optional IM.BaseDefine.UserStatType online_status = 13;
	optional uint32 msg_server_id = 14;
	optional uint32 cur_time = 15;
	
	optional bytes attach_data = 20;
}

//db_proxy
message IMValidateRsp{
	//cmd id:	0x0804
	required string user_name = 1;
	required uint32 result_code = 2;
	optional string result_string = 3;
	optional IM.BaseDefine.UserInfo user_info = 4;
	
	optional string user_token = 10;
	
	optional string version_max = 11; //最大版本号
	optional string version_download = 12; //下载地址
	optional string version_filesize = 13; //安装包大小
	
	optional bytes attach_data = 20;
}

//db_proxy
message IMGetDeviceTokenReq{
	//cmd id:	0x0805
	repeated uint32 user_id = 1;
	optional bytes attach_data = 20;
}

//db_proxy
message IMGetDeviceTokenRsp{
	//cmd id:	0x0806
	repeated IM.BaseDefine.UserTokenInfo user_token_info = 1;
	optional bytes attach_data = 20;
}

message IMRoleSet{
	//cmd id:	0x0807
	required uint32 master = 1;		//0-slave, 1-master
}

message IMOnlineUserInfo{
	//cmd id:	0x0808
	repeated IM.BaseDefine.UserStat user_stat_list = 1;
}

message IMMsgServInfo{
	//cmd id:	0x0809
	required string ip1 = 1;
	required string ip2 = 2;
	required uint32 port = 3;
	required uint32 max_conn_cnt = 4;
	required uint32 cur_conn_cnt = 5;
	required string host_name = 6;
}

message IMUserStatusUpdate{
	//cmd id:	0x080a
	required uint32 user_status = 1;
	required uint32 user_id = 2;
	required IM.BaseDefine.ClientType client_type = 3;
	
	optional uint32 user_uid = 10; //法宝号
	optional uint32 msg_server_id = 11;
	optional uint32 cur_time = 12;
}

message IMUserCntUpdate{
	//cmd id:	0x080b
	required uint32 user_action = 1; 		//1-inc, 2-dec
	required uint32 user_id = 2;
}

message IMServerKickUser{
	//cmd id:	0x080d
	required uint32 user_id = 1;
	required IM.BaseDefine.ClientType client_type = 2;
	required uint32 reason = 3;   	//KICK_REASON_DUPLICATE_USER = 1;
}

message IMServerPCLoginStatusNotify{
	//cmd id:	0x080e
	required uint32 user_id = 1;
	required uint32 login_status = 2; 		//1: on   0: off
}

message IMPushToUserReq{
	//cmd id:	0x080f
	required string flash = 1;
	required string push_data = 2;
	repeated IM.BaseDefine.UserTokenInfo user_token_list = 3;
}

message IMPushToUserRsp{
	//cmd id:	0x0810
	repeated IM.BaseDefine.PushResult push_result_list = 1;
}

message IMGroupGetShieldReq{
	//cmd id:			0x0811
	required uint32 group_id = 1;
	repeated uint32 user_id = 2;
	optional bytes attach_data = 20;
}

message IMGroupGetShieldRsp{
	//cmd id: 			0x0812
	required uint32 group_id = 1;
	repeated IM.BaseDefine.ShieldStatus shield_status_list = 2;
	optional bytes attach_data = 20;
}

message IMFileTransferReq{
	//cmd id:			0x0813
	required uint32 from_user_id = 1;
	required uint32 to_user_id = 2;
	required string file_name = 3;
	required uint32 file_size = 4;
	required IM.BaseDefine.FileType trans_mode = 5;
	optional bytes attach_data = 20;
}

message IMFileTransferRsp{
	//cmd id:			0x0814
	required uint32 result_code = 1;
	required uint32 from_user_id = 2;
	required uint32 to_user_id = 3;
	optional string file_name = 4;
	optional uint32 file_size = 5;
	optional string task_id = 6;
	optional IM.BaseDefine.FileType trans_mode = 7;
	optional bytes attach_data = 20;
}

message IMFileServerIPReq{
	//cmd id:			0x0815

}

message IMFileServerIPRsp{
	//cmd id:			0x0816
	repeated IM.BaseDefine.IpAddr ip_addr_list = 1;
}

//db_proxy
message IMGetFriendsidReq{//获取所有好友的id(服务器内部消息)
	//cmd id:		0x0817
	required uint32 user_id = 1;
	
	optional bytes attach_data = 20;
}

message IMGetFriendsidRes{		//获取好友列表
	//cmd id:		0x0818
	repeated uint32 friend_id_list = 1;
	
	optional bytes attach_data = 20;
}

//msg_server --> db_proxy
message IMMsgServerRestartNotify{
	//cmd id:	0x0819
	
	optional uint32 oprt_status = 1; //1=启动，2=关闭
	optional uint32 msg_server_id = 2;
	optional uint32 cur_time = 3;
	
}
